# octopus

./: .gitignore  README.md  justfile  meson.build
include/: octopus.h
src/: main.cpp  octopus.cpp
